// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`processMiddlewareConfig() should include global options in InternalSubtreeConfig objects 1`] = `
Object {
  "compress": false,
  "cookieName": "path1",
  "cookieOptions": Object {
    "path": "/test",
    "sameSite": false,
    "secure": true,
  },
  "decodeFunction": undefined,
  "encodeFunction": undefined,
  "ignoreStateFromStaticProps": false,
  "subtree": "path1",
}
`;

exports[`processMiddlewareConfig() should include global options in InternalSubtreeConfig objects 2`] = `
Object {
  "compress": false,
  "cookieName": "path2",
  "cookieOptions": Object {
    "path": "/test",
    "sameSite": false,
    "secure": true,
  },
  "decodeFunction": undefined,
  "encodeFunction": undefined,
  "ignoreStateFromStaticProps": false,
  "subtree": "path2",
}
`;

exports[`processMiddlewareConfig() should turn subtree strings into config objects 1`] = `
Object {
  "0": Object {
    "compress": true,
    "cookieName": "path1",
    "cookieOptions": Object {
      "path": "/",
      "sameSite": true,
    },
    "decodeFunction": undefined,
    "encodeFunction": undefined,
    "ignoreStateFromStaticProps": true,
    "subtree": "path1",
  },
  "1": Object {
    "compress": true,
    "cookieName": "path2",
    "cookieOptions": Object {
      "path": "/",
      "sameSite": true,
    },
    "decodeFunction": undefined,
    "encodeFunction": undefined,
    "ignoreStateFromStaticProps": true,
    "subtree": "path2",
  },
}
`;
